[gd_scene load_steps=28 format=2]

[ext_resource path="res://scripts/settings.gd" type="Script" id=1]
[ext_resource path="res://themes/kenvector_future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://themes/kenneyUI-green.tres" type="Theme" id=3]
[ext_resource path="res://themes/kenneyUI-red.tres" type="Theme" id=4]
[ext_resource path="res://assets/characters/playable/Elev1.png" type="Texture" id=5]
[ext_resource path="res://assets/characters/playable/Elev2.png" type="Texture" id=6]
[ext_resource path="res://assets/misc/a83961a96569971.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 864, 96, 48, 96 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 912, 96, 48, 96 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 960, 96, 48, 96 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1008, 96, 48, 96 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1056, 96, 48, 96 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1104, 96, 48, 96 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 864, 96, 48, 96 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 912, 96, 48, 96 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 960, 96, 48, 96 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 1008, 96, 48, 96 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 1056, 96, 48, 96 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 1104, 96, 48, 96 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "boy",
"speed": 7.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "girl",
"speed": 7.0
} ]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1986.0
margin_bottom = 1134.0
color = Color( 0.443137, 0.854902, 1, 1 )

[node name="Container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -241.0
margin_top = -280.0
margin_right = 241.0
margin_bottom = 428.0
custom_constants/separation = 80

[node name="Label" type="Label" parent="Container"]
margin_right = 482.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "SETTINGS"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
margin_top = 116.0
margin_right = 482.0
margin_bottom = 266.0
custom_constants/separation = 50

[node name="name" type="VBoxContainer" parent="Container/VBoxContainer"]
margin_right = 482.0
margin_bottom = 50.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Container/VBoxContainer/name"]
margin_right = 482.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
text = "Name"

[node name="Label2" type="LineEdit" parent="Container/VBoxContainer/name"]
margin_top = 22.0
margin_right = 482.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 5 )
expand_to_text_length = true

[node name="age" type="VBoxContainer" parent="Container/VBoxContainer"]
margin_top = 100.0
margin_right = 482.0
margin_bottom = 150.0

[node name="Label" type="Label" parent="Container/VBoxContainer/age"]
margin_right = 482.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 3 )
text = "Age"

[node name="Label2" type="LineEdit" parent="Container/VBoxContainer/age"]
margin_top = 22.0
margin_right = 482.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 6 )
expand_to_text_length = true

[node name="Notification" type="Label" parent="Container"]
margin_top = 346.0
margin_right = 482.0
margin_bottom = 364.0
custom_fonts/font = SubResource( 8 )

[node name="Button" type="Button" parent="Container"]
margin_top = 444.0
margin_right = 482.0
margin_bottom = 486.251
rect_pivot_offset = Vector2( -1050, -230 )
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 9 )
text = "SAVE"

[node name="Button2" type="Button" parent="Container"]
margin_top = 566.0
margin_right = 482.0
margin_bottom = 608.251
rect_pivot_offset = Vector2( -1050, -230 )
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 9 )
text = "GO BACK"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 1124, 462 )
scale = Vector2( 3.08333, 3.08333 )
frames = SubResource( 22 )
animation = "boy"

[node name="next" type="Button" parent="."]
margin_left = 1219.0
margin_top = 485.0
margin_right = 1801.0
margin_bottom = 954.0
rect_scale = Vector2( 0.1, 0.1 )
flat = true
expand_icon = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="next"]
position = Vector2( 276.921, 205.733 )
rotation = -1.5708
texture = ExtResource( 7 )

[node name="previous" type="Button" parent="."]
margin_left = 979.0
margin_top = 489.0
margin_right = 1561.0
margin_bottom = 958.0
rect_scale = Vector2( 0.1, 0.1 )
flat = true
expand_icon = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="previous"]
position = Vector2( 276.921, 205.733 )
rotation = 1.5708
texture = ExtResource( 7 )

[connection signal="pressed" from="Container/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Container/Button2" to="." method="_on_Button2_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
